crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_mutability_specifiers/functions/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Only a single mutability specifier can be provided.
   ╭─[input.sol:2:23]
   │
 2 │   function foo() pure view returns (uint) {
   │                       ──┬─  
   │                         ╰─── Error occurred here.
───╯
